[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcirclab"
version = "0.1.0"
description = "A tiny educational quantum circuit DSL and simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
authors = [
  {name = "Francisco Orts"}
]
license = {text = "MIT"}

[tool.setuptools]
packages = ["qcirclab"]
